--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -77,7 +77,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./Space-Mission.apk"
+export_path="../../../Downloads/Space-Mission.apk"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
